--- a/src/main/webapp/app/entities/tenderi/list/tenderi.component.html
+++ b/src/main/webapp/app/entities/tenderi/list/tenderi.component.html
@@ -1,24 +1,10 @@
-<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
-  <li [ngbNavItem]="1">
-    <a ngbNavLink>One</a>
-    <ng-template ngbNavContent>
-      <jhi-ponude></jhi-ponude>
-    </ng-template>
-  </li>
-  <li [ngbNavItem]="2">
-    <a ngbNavLink>Two</a>
-    <ng-template ngbNavContent>
-      <jhi-specifikacije></jhi-specifikacije>
-    </ng-template>
-  </li>
-  <li [ngbNavItem]="3">
-    <a ngbNavLink>Three</a>
-    <ng-template ngbNavContent>
-      <jhi-postupci></jhi-postupci>
-    </ng-template>
-  </li>
-</ul>
-
-<div [ngbNavOutlet]="nav" class="mt-2"></div>
-
-<pre>Active: {{ active }}</pre>
+<div>
+  <nav style="text-align: center">
+    <button routerLink="ponude">Check your balance</button>
+    <button routerLink="postupci">Postupci</button>
+    <button routerLink="/withdraw">Withdraw some money</button>
+  </nav>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+</div>
