--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -1,3 +1,4 @@
+{{ postupak }}
 <div>
   <h2 id="page-heading" data-cy="PonudeHeading">
     <span jhiTranslate="jhipsterApp.ponude.home.title">Ponudes</span>
