--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -51,12 +51,13 @@
             <div class="btn-group">
               <button
                 type="submit"
-                [routerLink]="['/postupci', postupci.id, 'view']"
+                [routerLink]="['/tenderi']"
+                [queryParams]="{ sifra: postupci.sifraPostupka }"
                 class="btn btn-info btn-sm"
                 data-cy="entityDetailsButton"
               >
                 <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                <span class="d-none d-md-inline">GG</span>
               </button>
 
               <button
