--- a/src/main/webapp/app/entities/tenderi/list/tenderi.component.html
+++ b/src/main/webapp/app/entities/tenderi/list/tenderi.component.html
@@ -1,10 +1,37 @@
-<div>
-  <nav style="text-align: center">
-    <button routerLink="ponude">Check your balance</button>
-    <button routerLink="postupci">Postupci</button>
-    <button routerLink="/withdraw">Withdraw some money</button>
-  </nav>
-  <div>
-    <router-outlet></router-outlet>
-  </div>
-</div>
+{{ sifra }}
+<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
+  <li [ngbNavItem]="1">
+    <a ngbNavLink>One</a>
+    <ng-template ngbNavContent>
+      <p>
+        Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse.
+        Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater
+        eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american
+        apparel, butcher voluptate nisi qui.
+      </p>
+    </ng-template>
+  </li>
+  <li [ngbNavItem]="2">
+    <a ngbNavLink>Two</a>
+    <ng-template ngbNavContent>
+      <jhi-ponude [postupak]="sifra"></jhi-ponude>
+    </ng-template>
+  </li>
+  <li [ngbNavItem]="3">
+    <a ngbNavLink>Three</a>
+    <ng-template ngbNavContent>
+      <p>
+        Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. Donec egestas ligula
+        vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio. Duis pharetra et nisl at faucibus.
+        Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna, egestas ut ipsum vel, volutpat volutpat neque. Praesent
+        fringilla tortor arcu. Vivamus faucibus nisl enim, nec tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio.
+        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
+        ultricies in eget neque. Phasellus nec tortor vel tellus pulvinar feugiat.
+      </p>
+    </ng-template>
+  </li>
+</ul>
+
+<div [ngbNavOutlet]="nav" class="mt-2"></div>
+
+<pre>Active: {{ active }}</pre>
